--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ author:
   mathoverflow     : "https://mathoverflow.net/users/15887/julian-kuelshammer"
   steam            :
   tumblr           :
-  twitter          : "juliankuelshammer"
+  twitter          : "kuelshammer"
   vine             :
   weibo            :
   xing             :
