--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Uppsala, Sweden"
   employer         : "Uppsala University"
   pubmed           : 
-  arxiv            : "https://arxiv.org/search/?query=K%C3%BClshammer%2C+Julian&searchtype=all&source=header"
+  arxiv            : "https://arxiv.org/a/kuelshammer_j_1.html"
   googlescholar    : "https://scholar.google.com/citations?user=S2KJLUIAAAAJ&hl=de"
   email            : "julian.kuelshammer@math.uu.se"
   researchgate     : "https://www.researchgate.net/profile/Julian-Kuelshammer-2"
