--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ author:
   arxiv            : "https://arxiv.org/a/kuelshammer_j_1.html"
   googlescholar    : "https://scholar.google.com/citations?user=S2KJLUIAAAAJ&hl=de"
   email            : "julian.kuelshammer@math.uu.se"
-  researchgate     : "https://www.researchgate.net/profile/Julian-Kuelshammer-2"
+  researchgate     : 
   uri              :
   bitbucket        :
   codepen          :
@@ -110,7 +110,7 @@ author:
   mathoverflow     : "https://mathoverflow.net/users/15887/julian-kuelshammer"
   steam            :
   tumblr           :
-  twitter          : "kuelshammer"
+  twitter          : 
   vine             :
   weibo            :
   xing             :
